--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,23 @@
 spring:
   datasource:
-    url: 'jdbc:h2:mem:todo'
-    username: 'user'
-    password: ''
-    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/todo
+    username: root
+    password: root
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
         show_sql: true
-  h2:
-    console:
-      enabled: true
-      path: '/h2-console'
+    open-in-view: false
+    show-sql: true
+    generate-ddl: true
+
+logging:
+  level:
+    org:
+      springframework:
+        orm.jpa: DEBUG
+        transaction: DEBUG
