--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,28 +1,41 @@
+env:
+  RESOURCE_PATH: src/main/resources/application.yml
+
 name: Build Test
+permissions: write-all
 
 on:
   push:
     branches: [ "main" ]
 
-permissions:
-  contents: read
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
+      - name: Set yml file
+        uses: microsoft/variable-substitution@v1
+        with:
+          files: ${{ env.RESOURCE_PATH }}
+        env:
+          spring.datasource.username: ${{ secrets.DB_USER_NAME }}
+          spring.datasource.password: ${{ secrets.DB_USER_PASSWORD }}
+
       - name: Setup MySQL
         uses: samin/mysql-action@v1
         with:
           character set server: 'utf8'
           mysql database: 'todo'
-          mysql root password: ${{ secrets.DB_PASSWORD }}
-      - uses: actions/checkout@v3
+          mysql user: ${{ secrets.DB_USER_NAME }}
+          mysql password: ${{ secrets.DB_USER_PASSWORD }}
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
+
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
