--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/todo?serverTimeZone=UTC&characterEncoding=UTF-8
-    username: root
-    password: root
+    username: ${username}
+    password: ${password}
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQLDialect
